--- a/resources/views/auth/signup.edge
+++ b/resources/views/auth/signup.edge
@@ -1,44 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    <section>
-        <form action="/signup" method="post">
-            <div>
-                <label for="email"></label>
-                <input type="text" name="name" id="name" />
-                @if(flashMessages.has('errors.name'))
-                 <small>{{ flashMessages.get('errors.name') }}</small>
-                @endif
-            </div>
-            <div>
-                <label for="email"></label>
-                <input type="email" name="email" id="email" />
-                @if(flashMessages.has('errors.email'))
-                 <small>{{ flashMessages.get('errors.email') }}</small>
-                @endif
-            </div>
-            <div>
-                <label for="password"></label>
-                <input type="password" name="password" id="password" />
-                  @if(flashMessages.has('errors.password'))
-                 <small>{{ flashMessages.get('errors.password') }}</small>
-                @endif
-            </div>
-            <div>
-                <label for="password_confirmation"></label>
-                <input type="password_confirmation" name="password_confirmation" id="password_confirmation" />
-            </div>
-            <div>
-                <input type="submit" value="Sign Up" />
-            </div>
-            
-        </form>
-    </section>
-</body>
-</html>
+@layout('layouts/app')
+    @section('content')
+        <section class="flex justify-center py-10">
+        <div  class="" style="width:22rem">
+        <article class="border px-10 py-6 bg-white">
+        <h1 class="text-4xl text-center">Adonisgram</h1>
+        <p class="font-bold text-gray-600 text-center py-4">Sign up to see photos and videos from your friends.</p>
+        <button class="w-full text-white rounded py-1 px-2" style="background-color: rgba(var(--d69,0,149,246),1);" >Log in with Facebook</button>
+        <p class="text-center text-gray-600 text-sm py-3">---------------- OR ---------------</p>
+            <form action="/signup" method="post">
+                <div>
+                    <label for="email"></label>
+                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="text" name="name" id="name" placeholder="Full Name" />
+                    @if(flashMessages.has('errors.name'))
+                    <small>{{ flashMessages.get('errors.name') }}</small>
+                    @endif
+                </div>
+                <div>
+                    <label for="email"></label>
+                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="email" name="email" id="email" placeholder="Mobile Number of Email" />
+                    @if(flashMessages.has('errors.email'))
+                    <small>{{ flashMessages.get('errors.email') }}</small>
+                    @endif
+                </div>
+                <div>
+                    <label for="password"></label>
+                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="password" name="password" id="password" placeholder="Username" />
+                    @if(flashMessages.has('errors.password'))
+                    <small>{{ flashMessages.get('errors.password') }}</small>
+                    @endif
+                </div>
+                <div>
+                    <label for="password_confirmation"></label>
+                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Password" />
+                </div>
+                <div class="mt-3">
+                    <input class="w-full text-white rounded py-1 px-2" style="background-color: rgba(var(--d69,0,149,246),1);" type="submit" value="Sign Up" />
+                </div>
+            </form>
+          <p class="py-5 px-3 text-center text-xs text-gray-600">By signing up, you agree to our Terms , Data Policy and Cookies Policy .</p>
+          </article>
+          <article class="border mt-3 text-center py-8 bg-white">
+             Have an account? <a href="/login" class="text-blue-500">Log In</a>
+          </article>
+          </div>
+        </section>
+    @endsection
