--- a/resources/views/profile.edge
+++ b/resources/views/profile.edge
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
-</head>
-<body>
-     I am Profile
-     {{ auth.user.email }}
-</body>
-</html>
+@layout('layouts/app')
+    @section('content')
+        I am Profile
+        {{ auth.user.email }}
+    @endsection
