Email verification issue is fixed

--- a/resources/views/auth/signup.edge
+++ b/resources/views/auth/signup.edge
@@ -24,14 +24,14 @@
                 </div>
                 <div>
                     <label for="password"></label>
-                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="password" name="password" id="password" placeholder="Username" />
+                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="password" name="password" id="password" placeholder="Password" />
                     @if(flashMessages.has('errors.password'))
                     <small>{{ flashMessages.get('errors.password') }}</small>
                     @endif
                 </div>
                 <div>
                     <label for="password_confirmation"></label>
-                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Password" />
+                    <input class="w-full bg-gray-200 text-xs border-gray-400 rounded-sm px-2 py-2 border my-1 placeholder-gray-600" type="password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Confirm Password" />
                 </div>
                 <div class="mt-3">
                     <input class="w-full text-white rounded py-1 px-2" style="background-color: rgba(var(--d69,0,149,246),1);" type="submit" value="Sign Up" />
