email verified for authentication

--- a/resources/views/profile.edge
+++ b/resources/views/profile.edge
@@ -2,4 +2,7 @@
     @section('content')
         I am Profile
         {{ auth.user.email }}
+        <form action="/verify-email" method="post">
+             <input type="submit" value="Resend">
+        </form>
     @endsection
